--- a/style.css
+++ b/style.css
@@ -547,9 +547,21 @@ main .recent-transactions .card-details .card {
   border-radius: 50%;
   margin-right: 30px;
 }
+.input{
+  width: 400px;
+}
+.inputs{
+  width: 400px;
+}
 
 /* ======  MEDIA QUERIES ====== */
 @media screen and (max-width: 1024px) {
+  .input{
+    width: 200px;
+  }
+  .inputs{
+    width: 100px;
+  }
   .settings-img {
     width: 100px;
     height: 100px;
